--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ def lifecycle_version = '2.4.0-alpha03'
 dependencies {
 
     //Modules
+    implementation project (":android-common")
     implementation project (":domain")
     implementation project (":data")
 
